--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,19 @@ version = "0.1.0"
 authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+node-cli = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner", features = ["service"] }
+node-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner" }
+
+sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner" }
+sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner" }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner" }
+
+env_logger = "0.7.1"
+log = "0.4.8"
+
+# Calling RPC
+jsonrpc-core-client = { version = "14.2", features = ["ws"] }
+tokio = "0.1"
+futures = "0.1.26"
+url = "1.7"
