--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "td
 env_logger = "0.7.1"
 log = "0.4.8"
 futures = "0.3"
+rand = "0.7"
 
 # Calling RPC
 jsonrpc-core-client = { version = "14.2", features = ["ws"] }
