--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,17 @@ sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "td-tes
 sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner" }
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner" }
 
+frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner" }
+
 env_logger = "0.7.1"
 log = "0.4.8"
 futures = "0.3"
 rand = "0.7"
+parking_lot = "0.10"
 
 # Calling RPC
 jsonrpc-core-client = { version = "14.2", features = ["ws"] }
 jsonrpc-core = "14.2"
 tokio = "0.1"
 url = "1.7"
+primitive-types = "0.7"
