--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,31 @@ version = "0.1.0"
 authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
 edition = "2018"
 
+[workspace]
+members = [
+    "runtime"
+]
+
 [dependencies]
-node-cli = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner", features = ["service"] }
-node-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner" }
+runtime = { package = "test-runtime", path = "./runtime" }
+node-cli = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
 
-sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner" }
-sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner" }
-sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner" }
+sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
 
-frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner" }
-
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+manual-seal = { package = "sc-consensus-manual-seal", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+parity-scale-codec = "1.3.1"
+structopt = "0.3.15"
 env_logger = "0.7.1"
 log = "0.4.8"
 hyper = "0.12.35"
@@ -21,16 +36,17 @@ futures01 = { package = "futures", version = "0.1.29" }
 futures = { package = "futures", version = "0.3", features = ["compat"] }
 rand = "0.7"
 parking_lot = "0.10"
-tokio = { version = "0.2", features = ["time"] }
+tokio = { version = "0.2", features = ["full"] }
 async-trait = "0.1.36"
 
 # Calling RPC
 jsonrpc-core-client = { version = "14.2", features = ["ws"] }
 jsonrpc-core = "14.2"
+jsonrpc-pubsub = "14.2"
 tokio-compat = { version = "0.1.6", features = ["rt-full"] }
 url = "1.7"
 primitive-types = "0.7"
 
 # Externalities
-sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner" }
-sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "td-test-runner" }
+sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
