--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,18 +20,25 @@ sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "se
 sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
 sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
 sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
 sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
 
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
 sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
 sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
 frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
+pallet-indices = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
 manual-seal = { package = "sc-consensus-manual-seal", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" }
 parity-scale-codec = "1.3.1"
 structopt = "0.3.15"
 env_logger = "0.7.1"
 log = "0.4.8"
 hyper = "0.12.35"
+serde_json = "1.0"
+derive_more = "0.99.9"
+substrate-subxt = { git = "https://github.com/paritytech/substrate-subxt.git", branch = "seun-substrate-test-runner" }
+jsonrpsee = "0.1.0"
 futures01 = { package = "futures", version = "0.1.29" }
 futures = { package = "futures", version = "0.3", features = ["compat"] }
 rand = "0.7"
