--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -15,6 +15,7 @@ codec = { package = "parity-scale-codec", version = "1.3.1", default-features = 
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 
 balances = { default-features = false, package = "pallet-balances", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
+indices = { default-features = false, package = "pallet-indices", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
 frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
 randomness-collective-flip = { default-features = false, package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
 sudo = { default-features = false, package = "pallet-sudo", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
@@ -34,6 +35,7 @@ sp-session = { default-features = false, git = "https://github.com/paritytech/su
 sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
 sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
 sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
+sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
 
 [build-dependencies]
 wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
