--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -14,31 +14,31 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 
-balances = { default-features = false, package = "pallet-balances", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-indices = { default-features = false, package = "pallet-indices", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-randomness-collective-flip = { default-features = false, package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-sudo = { default-features = false, package = "pallet-sudo", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-system = { default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-timestamp = { default-features = false, package = "pallet-timestamp", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-transaction-payment = { default-features = false, package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-sp-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" , default-features = false }
-sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" , default-features = false }
-sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-sp-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
-sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
+balances = { default-features = false, package = "pallet-balances", git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+indices = { default-features = false, package = "pallet-indices", git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+randomness-collective-flip = { default-features = false, package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+sudo = { default-features = false, package = "pallet-sudo", git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+system = { default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+timestamp = { default-features = false, package = "pallet-timestamp", git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+transaction-payment = { default-features = false, package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+sp-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" , default-features = false }
+sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" , default-features = false }
+sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+sp-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
+sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
 
 [build-dependencies]
-wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
+wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal"  }
 
 [features]
 default = ["std"]
