--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,9 +68,12 @@ tokio-compat = { version = "0.1.6", features = ["rt-full"] }
 url = "1.7"
 primitive-types = "0.7"
 
-node-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-node-cli = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-
 [dev-dependencies]
-node-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
+node-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 node-executor = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
+node-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
+#node-cli = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
+#polkadot-runtime = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }
+#polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }
+#polkadot-service = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }
+#polkadot-cli = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }
