--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,45 +6,45 @@ edition = "2018"
 
 [dependencies]
 # client deps
-sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-informant = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-manual-seal = { package = "sc-consensus-manual-seal", git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
+sc-executor = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sc-service = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sc-informant = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sc-network = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sc-cli = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sc-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sc-consensus = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sc-client-db = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sc-client-api = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+manual-seal = { package = "sc-consensus-manual-seal", git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
 
 # primitive deps
-sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
+sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-block-builder = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-api = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-consensus = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sc-keystore = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-session = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-offchain = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-inherents = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-timestamp = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-keyring = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-externalities = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+sp-storage = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
 
 # pallets
-frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-pallet-indices = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
+frame-system = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+pallet-balances = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+pallet-indices = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
 finality-grandpa = "0.12.3"
 
 parity-scale-codec = "1.3.1"
@@ -69,11 +69,12 @@ url = "1.7"
 primitive-types = "0.7"
 
 [dev-dependencies]
-#node-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-#node-executor = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-#node-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-#node-cli = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-polkadot-runtime = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }
-polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }
-polkadot-service = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }
-polkadot-cli = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }
+node-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+node-executor = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+node-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+node-cli = { git = "https://github.com/paritytech/substrate.git", rev = "462219a2b" }
+
+#polkadot-runtime = { git = "https://github.com/paritytech/polkadot.git", rev = "master" }
+#polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot.git", rev = "master" }
+#polkadot-service = { git = "https://github.com/paritytech/polkadot.git", rev = "master" }
+#polkadot-cli = { git = "https://github.com/paritytech/polkadot.git", rev = "master" }
