clean up extrinsics creation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branc
 sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
+sc-rpc-server = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 manual-seal = { package = "sc-consensus-manual-seal", git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 
 # primitive deps
@@ -63,9 +64,9 @@ hex = "0.4.2"
 tokio = { version = "0.2", features = ["full"] }
 
 # Calling RPC
-jsonrpc-core-client = { version = "14.2", features = ["ws"] }
-jsonrpc-core = "14.2"
-jsonrpc-pubsub = "14.2"
+jsonrpc-core-client = { version = "15.0", features = ["ws"] }
+jsonrpc-core = "15.0"
+jsonrpc-pubsub = "15.0"
 tokio-compat = { version = "0.1.6", features = ["rt-full"] }
 url = "1.7"
 primitive-types = "0.7"
