--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch = "
 sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 sc-rpc-server = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 manual-seal = { package = "sc-consensus-manual-seal", git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
+sc-state-db = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 
 # primitive deps
 sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
@@ -44,8 +45,10 @@ sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "se
 sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 
 # pallets
+frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
+pallet-democracy = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 pallet-indices = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 finality-grandpa = "0.12.3"
@@ -73,11 +76,6 @@ url = "1.7"
 primitive-types = "0.7"
 
 [dev-dependencies]
-node-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-node-executor = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-node-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-node-cli = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-
 polkadot-runtime = { git = "https://github.com/paritytech/polkadot.git", branch = "seun-babe-manual-seal" }
 polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot.git", branch = "seun-babe-manual-seal" }
 polkadot-service = { git = "https://github.com/paritytech/polkadot.git", branch = "seun-babe-manual-seal" }
